# AiCockpit

./: .env  .gitignore  ACP Handoffdoc.txt  AiCockpit outline - Handoff Doc.txt  AiCockpit- vLLM Integration and VS Code.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF_SUMMARY.md  LICENSE  README.md  example.env  install_acp.sh  package-lock.json  project.toml  pyproject.toml  requirements.txt  run_tests.sh  work_board.py
acp_backend/: __init__.py  config.py  dependencies.py  main.py
acp_backend/core/: __init__.py  agent_config_handler.py  agent_executor.py  external_ai_manager.py  fs_manager.py  llm_manager.py  session_handler.py  test_session_handler.py  workspace_provisioning.py
acp_backend/core/container_management/: __init__.py  container_exceptions.py  container_models.py  container_orchestrator.py
acp_backend/llm_backends/: base.py  llama_cpp.py  pie.py
acp_backend/models/: agent_models.py  ai_config_models.py  common.py  file_models.py  llm_models.py  work_board_models.py  work_session_models.py
acp_backend/routers/: agents.py  combined_routers.txt  llm_service.py  system.py  terminal_service.py  work_board.py  work_sessions.py  workspace_files.py  workspaces.py
acp_backend/scripts/: discover_models.py
acp_frontend/: ACP Interface Description.txt  AiCockpit Web Interface.txt  create_placeholder_pages.sh  next.config.js  package-lock.json  package.json  tailwind.config.ts
acp_frontend/ACP WEBPAGE DOWNLAOD/: AiCockpit.html  AiCockpit.mhtml
acp_frontend/ACP WEBPAGE DOWNLAOD/AiSight - Firebase Studio_files/: RotateCookiesPage.html  [root of the server]__b07dbc43._.css  [turbopack]_browser_dev_hmr-client_hmr-client_ts_49a6ea35._.js.download  _be317ff2._.js.download  index-D1krZiGU.css  m=base  msg.html  node_modules_@swc_helpers_cjs_00636ac3._.js.download  node_modules_a31e2e15._.js.download  node_modules_b96e8950._.js.download  node_modules_ff8b445d._.js.download  node_modules_next_dist_1a6ee436._.js.download  node_modules_next_dist_build_polyfills_polyfill-nomodule.js.download  node_modules_next_dist_client_43e3ffb8._.js.download  node_modules_next_dist_compiled_2ce9398a._.js.download  saved_resource(1).html  src_1246dabe._.js.download  src_app_(app)_interact_page_tsx_c137a2f4._.js.download  src_app_(app)_layout_tsx_4750dcde._.js.download  src_app_favicon_ico_mjs_79b6a596._.js.download
acp_frontend/public/: demo.html
acp_frontend/src/ai/: dev.ts  genkit.ts
acp_frontend/src/app/: globals.css  layout.tsx  page.tsx
acp_frontend/src/hooks/: use-mobile.ts
acp_frontend/src/lib/: api-client.ts  api.ts  chart-utils.ts  constants.ts
acp_frontend_backup/: create_frontend_structure.sh  package.json  tailwind.config.ts
acp_frontend_backup/ACP WEBPAGE DOWNLAOD/: AiSight - Firebase Studio.html
acp_frontend_backup/ACP WEBPAGE DOWNLAOD/AiSight - Firebase Studio_files/: [turbopack]_browser_dev_hmr-client_hmr-client_ts_5160d576._.js.download  [turbopack]_browser_dev_hmr-client_hmr-client_ts_61dcf9ba._.js.download  [turbopack]_browser_dev_hmr-client_hmr-client_ts_ef8f0ede._(1).js.download  _e69f0d32._.js.download  capra.html  (+7 more)
docs/: CONTAINERIZED_IDE_ARCHITECTURE.md  DEVELOPMENT_STATUS.md  NEW_CONTAINERIZED_IDE_ARCHITECTURE.md  NEW_DEVELOPMENT_STATUS.md  NEW_PROJECT_RESTRUCTURE_PLAN.md  NEW_PROJECT_VISION.md  NEW_TECHNICAL_ARCHITECTURE.md  PRODUCT_FOCUS.md  REFACTORING_PLAN.md  VISION_DASHBOARD_ARCHITECTURE.md  WORKSPACE_USER_GUIDE.md
scripts/: project_health_check.py  setup_external_ai.py
tests/: test_syspath.py
tests/integration/: conftest.py  test_agent_execution_scoping.py  test_streaming_endpoints.py
tests/unit/: test_work_session_models.py
work_sessions/_agent_configs/: default_session_agents.json
(+47 files in other folders)
